--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "robofriends",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://AronAman.github.io/rofofriends",
+  "homepage": "https://aronaman.github.io/robofriends/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.2",
@@ -10,8 +10,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
-    "tachyons": "^4.12.0",
-    "web-vitals": "^0.2.4"
+    "tachyons": "^4.12.0"
   },
   "scripts": {
     "start": "react-scripts start",
